@@ -1,0 +1,17 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tryton>
+    <data>
+        <record model="rule_engine.function" id="montant_de_couverture_base">
+            <field name="translated_technical_name">montant_de_couverture_de_base</field>
+            <field name="description">Montant de couverture de base</field>
+            <field name="type">function</field>
+            <field name="language" ref="ir.lang_fr"/>
+            <field name="namespace">rule_engine.runtime</field>
+            <field name="name">_re_get_base_coverage_amount</field>
+            <field name="long_description">Le montant de couverture à la date de calcul hors réévaluations</field>
+            <field name="parent" ref="offered_insurance.dossier_donnees_couverture"/>
+        </record>
+    </data>
+</tryton>
