@@ -8,5 +8,6 @@ depends:
     contract_coverage_amount
     contract_term_renewal
 xml:
+    rule_engine.xml
     offered.xml
     contract.xml
