@@ -1,3 +1,5 @@
+* FEA#6925 Distinction entre revalorisation et saisie des montants de couverture
+
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
