@@ -1,3 +1,5 @@
+* FEA#6925 Distinguish between coverage amount inputs and revaluation
+
 Version 1.12 - 2017-04-28
 
 Version 1.10 - 2016-11-02
